fix: time align in video block

--- a/assets/styles/components/_BlockVideo.scss
+++ b/assets/styles/components/_BlockVideo.scss
@@ -112,7 +112,6 @@ $positions: ("left", "right");
 		p {
 
 			@include color(color, font-color-light);
-			text-align: right;
 			font-family: $font-secondary;
 			font-weight: 600;
 			font-size: 0.75rem;
